--- a/Maui.OldPhone.Keypad/Maui.OldPhone.Keypad.Emulator.Demo/Resources/Styles/Colors.xaml
+++ b/Maui.OldPhone.Keypad/Maui.OldPhone.Keypad.Emulator.Demo/Resources/Styles/Colors.xaml
@@ -1,8 +1,39 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
 <?xaml-comp compile="true" ?>
-<ResourceDictionary 
-    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+<ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+
+    <!--  WinUI  -->
+    <Color x:Key="Blue0">#8ECDE9</Color>
+    <Color x:Key="Blue1">#80B9D2</Color>
+    <Color x:Key="Blue2">#73A7BD</Color>
+    <Color x:Key="Blue3">#6796AA</Color>
+    <Color x:Key="Blue4">#5D8799</Color>
+
+    <!--  Android  -->
+    <Color x:Key="Bronce0">#E9C58E</Color>
+    <Color x:Key="Bronce1">#D2B180</Color>
+    <Color x:Key="Bronce2">#BD9F73</Color>
+    <Color x:Key="Bronce3">#AA8F67</Color>
+    <Color x:Key="Bronce4">#99815D</Color>
+
+    <!--  iOS  -->
+    <Color x:Key="Green0">#73E775</Color>
+    <Color x:Key="Green1">#67D069</Color>
+    <Color x:Key="Green2">#5DBB5F</Color>
+    <Color x:Key="Green3">#5DBB5F</Color>
+    <Color x:Key="Green4">#4C974D</Color>
+
+
+    <Color x:Key="Gray">#919191</Color>
+
+
+    <Color x:Key="LightRed">#FFFF3647</Color>
+    <Color x:Key="LightGreen&gt;">#FF90EE90</Color>
+
+    <Color x:Key="Chocolate">#FFD2691E</Color>
+    <Color x:Key="DarkSeaGreen">#86A586</Color>
+    <Color x:Key="DarkOliveGreen">#FF556B2F</Color>
+    <Color x:Key="LightSteelBlue">#FFB0C4DE</Color>
 
     <Color x:Key="Primary">#512BD4</Color>
     <Color x:Key="Secondary">#DFD8F7</Color>
@@ -17,19 +48,19 @@
     <Color x:Key="Gray600">#404040</Color>
     <Color x:Key="Gray900">#212121</Color>
     <Color x:Key="Gray950">#141414</Color>
-    <SolidColorBrush x:Key="PrimaryBrush" Color="{StaticResource Primary}"/>
-    <SolidColorBrush x:Key="SecondaryBrush" Color="{StaticResource Secondary}"/>
-    <SolidColorBrush x:Key="TertiaryBrush" Color="{StaticResource Tertiary}"/>
-    <SolidColorBrush x:Key="WhiteBrush" Color="{StaticResource White}"/>
-    <SolidColorBrush x:Key="BlackBrush" Color="{StaticResource Black}"/>
-    <SolidColorBrush x:Key="Gray100Brush" Color="{StaticResource Gray100}"/>
-    <SolidColorBrush x:Key="Gray200Brush" Color="{StaticResource Gray200}"/>
-    <SolidColorBrush x:Key="Gray300Brush" Color="{StaticResource Gray300}"/>
-    <SolidColorBrush x:Key="Gray400Brush" Color="{StaticResource Gray400}"/>
-    <SolidColorBrush x:Key="Gray500Brush" Color="{StaticResource Gray500}"/>
-    <SolidColorBrush x:Key="Gray600Brush" Color="{StaticResource Gray600}"/>
-    <SolidColorBrush x:Key="Gray900Brush" Color="{StaticResource Gray900}"/>
-    <SolidColorBrush x:Key="Gray950Brush" Color="{StaticResource Gray950}"/>
+    <SolidColorBrush x:Key="PrimaryBrush" Color="{StaticResource Primary}" />
+    <SolidColorBrush x:Key="SecondaryBrush" Color="{StaticResource Secondary}" />
+    <SolidColorBrush x:Key="TertiaryBrush" Color="{StaticResource Tertiary}" />
+    <SolidColorBrush x:Key="WhiteBrush" Color="{StaticResource White}" />
+    <SolidColorBrush x:Key="BlackBrush" Color="{StaticResource Black}" />
+    <SolidColorBrush x:Key="Gray100Brush" Color="{StaticResource Gray100}" />
+    <SolidColorBrush x:Key="Gray200Brush" Color="{StaticResource Gray200}" />
+    <SolidColorBrush x:Key="Gray300Brush" Color="{StaticResource Gray300}" />
+    <SolidColorBrush x:Key="Gray400Brush" Color="{StaticResource Gray400}" />
+    <SolidColorBrush x:Key="Gray500Brush" Color="{StaticResource Gray500}" />
+    <SolidColorBrush x:Key="Gray600Brush" Color="{StaticResource Gray600}" />
+    <SolidColorBrush x:Key="Gray900Brush" Color="{StaticResource Gray900}" />
+    <SolidColorBrush x:Key="Gray950Brush" Color="{StaticResource Gray950}" />
 
     <Color x:Key="Yellow100Accent">#F7B548</Color>
     <Color x:Key="Yellow200Accent">#FFD590</Color>
