implementation of landing- and parser page

--- a/Maui.OldPhone.Keypad/Maui.OldPhone.Keypad.Emulator.Demo/AppShell.xaml
+++ b/Maui.OldPhone.Keypad/Maui.OldPhone.Keypad.Emulator.Demo/AppShell.xaml
@@ -3,12 +3,13 @@
     x:Class="Maui.OldPhone.Keypad.Emulator.Demo.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:Maui.OldPhone.Keypad.Emulator.Demo"
-    Shell.FlyoutBehavior="Disabled">
+    xmlns:views="clr-namespace:Maui.OldPhone.Keypad.Emulator.Demo.Views"
+    Shell.FlyoutBehavior="Disabled"
+    Style="{StaticResource OldPhoneShell}">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        ContentTemplate="{DataTemplate views:LandingPage}"
+        Route="LandingPage" />
 
 </Shell>
