--- a/Maui.OldPhone.Keypad/Maui.OldPhone.Keypad.Emulator.Demo/Views/ParserDemoPage.xaml
+++ b/Maui.OldPhone.Keypad/Maui.OldPhone.Keypad.Emulator.Demo/Views/ParserDemoPage.xaml
@@ -1,12 +1,124 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Maui.OldPhone.Keypad.Emulator.Demo.Views.ParserDemoPage"
-             Title="ParserDemoPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI! parser"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+<ContentPage
+    x:Class="Maui.OldPhone.Keypad.Emulator.Demo.Views.ParserDemoPage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:models="clr-namespace:Maui.OldPhone.Keypad.Emulator.Demo.Models"
+    xmlns:services="clr-namespace:Maui.OldPhone.Keypad.Emulator.Demo.Services"
+    xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+    xmlns:viewModels="clr-namespace:Maui.OldPhone.Keypad.Emulator.Demo.ViewModels"
+    Title="{Binding PageTitle}"
+    x:DataType="viewModels:ParserDemoPageViewModel">
+
+    <Grid>
+        <ScrollView>
+            <VerticalStackLayout VerticalOptions="Start">
+
+                <Label
+                    FontSize="Title"
+                    HorizontalOptions="Center"
+                    Style="{DynamicResource LabelStyle}" />
+
+                <!--  Sample selection  -->
+                <HorizontalStackLayout
+                    Padding="5"
+                    HorizontalOptions="Center"
+                    VerticalOptions="Center">
+
+                    <Label
+                        Padding="0,0,0,0"
+                        Text="Selected sample: "
+                        VerticalOptions="Center"
+                        WidthRequest="120" />
+
+                    <Picker
+                        x:DataType="{x:Null}"
+                        ItemDisplayBinding="{Binding DisplayName}"
+                        ItemsSource="{Binding SampleData, Mode=TwoWay}"
+                        SelectedItem="{Binding SelectedSampleData, Mode=TwoWay}"
+                        VerticalOptions="Center"
+                        WidthRequest="250" />
+
+                </HorizontalStackLayout>
+
+                <!--  Allowed input info  -->
+                <HorizontalStackLayout
+                    Padding="5"
+                    HorizontalOptions="Center"
+                    VerticalOptions="Center">
+
+                    <Label
+                        Text="Valid input are digits, spaces, asterisks and routes."
+                        TextColor="Orange"
+                        VerticalOptions="Center"
+                        WidthRequest="370" />
+
+                </HorizontalStackLayout>
+
+                <!--  Input Editor  -->
+                <HorizontalStackLayout
+                    Padding="5"
+                    HorizontalOptions="Center"
+                    VerticalOptions="Center">
+
+                    <Label
+                        Text="Input value: "
+                        VerticalOptions="Start"
+                        WidthRequest="120" />
+
+                    <Editor
+                        x:Name="inputEditor"
+                        AutoSize="TextChanges"
+                        Text="{Binding SelectedSampleData.InputValue}"
+                        WidthRequest="250">
+                        <Editor.Behaviors>
+                            <toolkit:EventToCommandBehavior Command="{Binding InputChangedCommand}" EventName="TextChanged" />
+
+                        </Editor.Behaviors>
+                    </Editor>
+
+                </HorizontalStackLayout>
+
+                <!--  Output Editor  -->
+                <HorizontalStackLayout
+                    Padding="5"
+                    HorizontalOptions="Center"
+                    VerticalOptions="Center">
+
+                    <Label
+                        Text="Output value: "
+                        VerticalOptions="Start"
+                        WidthRequest="120" />
+
+                    <Editor
+                        x:Name="outputEditor"
+                        AutoSize="TextChanges"
+                        IsEnabled="{Binding IsEnabled}"
+                        IsReadOnly="True"
+                        Text="{Binding ParsedOutput}"
+                        WidthRequest="250" />
+
+                </HorizontalStackLayout>
+
+                <!--  Send Button  -->
+                <HorizontalStackLayout
+                    Padding="5"
+                    HorizontalOptions="Center"
+                    VerticalOptions="Center">
+
+                    <Button
+                        Command="{Binding ParsInputCommand}"
+                        HorizontalOptions="Center"
+                        Style="{StaticResource OldPhoneButton}"
+                        Text="Parse input"
+                        WidthRequest="370" />
+
+                </HorizontalStackLayout>
+
+            </VerticalStackLayout>
+
+        </ScrollView>
+
+    </Grid>
+
 </ContentPage>
